Add note to OS to FAQ.

--- a/app/views/page/faq.html.erb
+++ b/app/views/page/faq.html.erb
@@ -116,6 +116,15 @@
       Sometimes a software library is changing his namespace. That is specially a common case in the Java community. For example <a href="https://www.versioneye.com/java/pdfbox:pdfbox/0.7.3">pdfbox:pdfbox:0.7.3</a> moved to <a href="https://www.versioneye.com/java/org.apache.pdfbox:pdfbox/1.8.9">org.apache.pdfbox:pdfbox:1.8.9</a>. Indeed it's the same project. Currently VersionEye is not handling this problem. Might be that in future we make a connection between those migrated libraries, but right now not.
     </p>
 
+    <a name="migrated_packages"></a>
+    <h2>
+      Can I run the VersionEye software on my own hardware?
+      <a class="octicon-link" href="#migrated_packages"><i class="fa fa-link"></i></a>
+    </h2>
+    <p class="l_faq_section">
+      Sure, you can! VersionEye is open source and here is described how you can spin up your own VersionEye instance: <a href="https://github.com/versioneye/ops_contrib">https://github.com/versioneye/ops_contrib</a>
+    </p>
+
   </div>
 
 </div>
