Add carbon ads.

--- a/app/views/products/helpers/_kpis.html.erb
+++ b/app/views/products/helpers/_kpis.html.erb
@@ -153,3 +153,7 @@
     <%= link_to 'edit', product_edit_path %>
   </div>
 <% end %>
+
+<div>
+  <script async type="text/javascript" src="//cdn.carbonads.com/carbon.js?zoneid=1673&amp;serve=C6AILKT&amp;placement=versioneyecom" id="_carbonads_js"></script>
+</div>
