--- a/app/views/organisations/plan.html.erb
+++ b/app/views/organisations/plan.html.erb
@@ -10,7 +10,7 @@
 
   <div class="content" >
     <p>
-      Open source projects are for free! We only charge a small fee for monitoring project files in private GitHub/Bitbucket repositories.<br/>
+      We only charge a small fee for monitoring project files in GitHub/Bitbucket repositories.<br/>
     </p>
     <hr />
 
@@ -29,7 +29,7 @@
       <br/>
       <ul>
         <li style="padding-bottom: 10px;">
-          <b>Private project</b>: A private VersionEye project is a project which is based on a project file (Gemfile, pom.xml and so on) in an private Git repository.
+          <b>Project</b>: A private VersionEye project is a project which is based on a project file (Gemfile, pom.xml and so on) in an Git repository.
         </li>
         <li style="padding-bottom: 10px;">
           <b>API calls per hour</b>: The number of HTTP requests per hour you can do to the VersionEye <a href="/api">API</a> depends on your subscription. As higher your subscription plan as more API calls per hour you can do. The API calls are especially important for you if you want to integrate VersionEye into your own tool chain.
