--- a/app/views/pricing/index.html.erb
+++ b/app/views/pricing/index.html.erb
@@ -2,8 +2,7 @@
 
 <div class="col2-left col2-right">
   <p style="padding-top: 30px; margin-bottom: 5px; font-size: 18px;">
-    VersionEye allows you to monitor your open source projects for free!
-    We only charge a small fee for monitoring project files in private GitHub/Bitbucket repositories.
+    We only charge a small fee for monitoring project files in GitHub/Bitbucket repositories.
     VersionEye has a variety of plans to suit everyone's needs. <br/>
     <br/>
     <b>All of our SaaS plans can be cancelled or changed on a monthly base.</b>
@@ -17,7 +16,7 @@
       <li class="pricing_price">€ 0 <span class="pricing_price_sm">/ Month</span></li>
       <li class="pricing_feature"><span class="pricing_light_txt">Collaborators:</span> Unlimited</li>
       <li class="pricing_feature"><span class="pricing_light_txt">Open Source Projects:</span> Unlimited</li>
-      <li class="pricing_feature"><span class="pricing_light_txt">Private Projects:</span> 1</li>
+      <li class="pricing_feature"><span class="pricing_light_txt">Projects:</span> 1</li>
       <li class="pricing_feature"><span class="pricing_light_txt">API Calls / Hour: </span> 50</li>
       <li class="pricing_feature"><%= render :partial => 'plan', :locals => { :plan_id => '04_free', :alignment => ''  } %></li>
     </ul>
@@ -31,7 +30,7 @@
       <li class="pricing_price">€ 7 <span class="pricing_price_sm">/ Month</span></li>
       <li class="pricing_feature"><span class="pricing_light_txt">Collaborators:</span> Unlimited</li>
       <li class="pricing_feature"><span class="pricing_light_txt">Open Source Projects:</span> Unlimited</li>
-      <li class="pricing_feature"><span class="pricing_light_txt">Private Projects:</span> 5</li>
+      <li class="pricing_feature"><span class="pricing_light_txt">Projects:</span> 5</li>
       <li class="pricing_feature"><span class="pricing_light_txt">API Calls / Hour: </span> 100</li>
       <li class="pricing_feature"><%= render :partial => 'plan', :locals => { :plan_id => '04_micro', :alignment => ''  } %></li>
     </ul>
@@ -42,7 +41,7 @@
       <li class="pricing_price pricing_recommend">€ 22 <span class="pricing_price_sm">/ Month</span></li>
       <li class="pricing_feature"><span class="pricing_light_txt">Collaborators:</span> Unlimited</li>
       <li class="pricing_feature"><span class="pricing_light_txt">Open Source Projects:</span> Unlimited</li>
-      <li class="pricing_feature"><span class="pricing_light_txt">Private Projects:</span> 20</li>
+      <li class="pricing_feature"><span class="pricing_light_txt">Projects:</span> 20</li>
       <li class="pricing_feature"><span class="pricing_light_txt">API Calls / Hour: </span> 300</li>
       <li class="pricing_feature">PDF Reports</li>
       <li class="pricing_feature">CSV Reports</li>
@@ -55,7 +54,7 @@
       <li class="pricing_price">€ 100 <span class="pricing_price_sm">/ Month</span></li>
       <li class="pricing_feature"><span class="pricing_light_txt">Collaborators:</span> Unlimited</li>
       <li class="pricing_feature"><span class="pricing_light_txt">Open Source Projects:</span> Unlimited</li>
-      <li class="pricing_feature">Private Projects: 100</li>
+      <li class="pricing_feature">Projects: 100</li>
       <li class="pricing_feature"><span class="pricing_light_txt">API Calls / Hour: </span> 1000</li>
       <li class="pricing_feature">PDF Reports</li>
       <li class="pricing_feature">CSV Reports</li>
