--- a/app/views/enterprise/show.html.erb
+++ b/app/views/enterprise/show.html.erb
@@ -151,7 +151,7 @@
         <div class="well-white" >
           <p class="lead">
             <a href="https://www.versioneye.com">VersionEye.com</a> is monitoring
-            550K open source projects on a daily basis. The crawlers are running 24/7 to
+            1.1M open source projects on a daily basis. The crawlers are running 24/7 to
             keep our database in the cloud up-to-date. VersionEye Enterprise can crawl your
             private repositories in-house, but then your are still missing all the open
             source libraries from the Internet. For sure you don't want to run &amp;
