--- a/app/views/pricing/_plan.html.erb
+++ b/app/views/pricing/_plan.html.erb
@@ -1,4 +1,4 @@
 <form action="/signup" >
   <input type="hidden" name="plan" value="<%=plan_id%>" />
-  <button class="btn btn-big btn-success <%= alignment %>">Sign up for free!</button>
+  <button class="btn btn-big btn-success <%= alignment %>">Book it now!</button>
 </form>
