--- a/app/views/organisations/_billing_fields.html.erb
+++ b/app/views/organisations/_billing_fields.html.erb
@@ -22,7 +22,7 @@
 </div>
 
 <div class="form-group">
-  <%= label_tag :name, "Name", :class => "control-label", :for => "name" %>
+  <%= label_tag :name, "Name *", :class => "control-label", :for => "name" %>
   <div class="controls" >
     <input type="text" size="20" autocomplete="off" class="form-control" id="name" name="name" value="<%= @billing_address.name %>" />
     <%= render :partial => 'shared/input_error', :locals => {:model => @billing_address, :key => :name} %>
@@ -30,7 +30,7 @@
 </div>
 
 <div class="form-group">
-  <%= label_tag :street, "Street", :class => "control-label", :for => "street" %>
+  <%= label_tag :street, "Street *", :class => "control-label", :for => "street" %>
   <div class="controls" >
     <input type="text" size="20" autocomplete="off" class="round form-control" id="street" name="street" value="<%= @billing_address.street %>" />
     <%= render :partial => 'shared/input_error', :locals => {:model => @billing_address, :key => :street} %>
@@ -38,7 +38,7 @@
 </div>
 
 <div class="form-group">
-  <%= label_tag :zip_code, "Zip", :class => "control-label", :for => "zip_code" %>
+  <%= label_tag :zip_code, "Zip *", :class => "control-label", :for => "zip_code" %>
   <div class="controls" >
     <input type="text" size="60" autocomplete="off" class="round form-control" id="zip_code" name="zip_code" style="width: 80px;" value="<%= @billing_address.zip %>" />
     <%= render :partial => 'shared/input_error', :locals => {:model => @billing_address, :key => :zip} %>
@@ -46,7 +46,7 @@
 </div>
 
 <div class="form-group">
-  <%= label_tag :city, "City", :class => "control-label", :for => "city" %>
+  <%= label_tag :city, "City *", :class => "control-label", :for => "city" %>
   <div class="controls" >
     <input type="text" size="20" autocomplete="off" class="round form-control" id="city" name="city" style="width: 140px;" value="<%= @billing_address.city %>" />
     <%= render :partial => 'shared/input_error', :locals => {:model => @billing_address, :key => :city} %>
@@ -54,7 +54,7 @@
 </div>
 
 <div class="form-group">
-  <%= label_tag :country, "Country", :class => "control-label", :for => "country" %>
+  <%= label_tag :country, "Country *", :class => "control-label", :for => "country" %>
   <div class="controls" >
     <select id="country" name="country" class="form-control" >
       <% BillingAddress::A_COUNTRIES.keys.each do |key| %>
@@ -66,7 +66,7 @@
 </div>
 
 <div class="form-group">
-  <%= label_tag :email, "Email", :class => "control-label", :for => "email" %>
+  <%= label_tag :email, "Email *", :class => "control-label", :for => "email" %>
   <div class="controls" >
     <input type="text" size="20" autocomplete="off" class="round form-control" id="email" name="email" value="<%= @billing_address.email %>" />
     <%= render :partial => 'shared/input_error', :locals => {:model => @billing_address, :key => :email} %>
@@ -77,7 +77,7 @@
 <% display_style = "block" if @billing_address.type == BillingAddress::A_TYPE_CORPORATE %>
 <div id="company_fields" style="display: <%= display_style %>;">
   <div class="form-group" >
-    <%= label_tag :name, "Company", :class => "control-label", :for => "company" %>
+    <%= label_tag :name, "Company *", :class => "control-label", :for => "company" %>
     <div class="controls" >
       <input type="text" size="20" autocomplete="off" class="round form-control" id="company" name="company" value="<%= @billing_address.company %>" />
       <%= render :partial => 'shared/input_error', :locals => {:model => @billing_address, :key => :company} %>
@@ -85,7 +85,7 @@
   </div>
 
   <div class="form-group">
-    <%= label_tag :taxid, "Tax ID", :class => "control-label", :for => "company" %>
+    <%= label_tag :taxid, "Tax ID *", :class => "control-label", :for => "company" %>
     <div class="controls" >
       <input type="text" size="20" autocomplete="off" class="round form-control" id="taxid" name="taxid" value="<%= @billing_address.taxid %>" />
       <%= render :partial => 'shared/input_error', :locals => {:model => @billing_address, :key => :taxid} %>
