--- a/app/views/products/_product_show_description.html.erb
+++ b/app/views/products/_product_show_description.html.erb
@@ -24,6 +24,16 @@
         <% end %>
       </p>
     <% end %>
+
+    <% if signed_in? && @current_user && @current_user.username.eql?('reiz') %>
+      <div id='div-gpt-ad-1407836245189-0'>
+        <script type='text/javascript'>
+          googletag.cmd.push(function() {
+            googletag.pubads().display('/53015287/versioneye.com_d_728x90_1', [728, 90], 'div-gpt-ad-1407836245189-0');
+          });
+        </script>
+      </div>
+    <% end %>
   </div>
 
 <% end %>
