Exchange Ad provider.

--- a/app/views/products/_product_show_links.html.erb
+++ b/app/views/products/_product_show_links.html.erb
@@ -36,3 +36,13 @@
     <a href="https://twitter.com/<%= @product.twitter_name %>" target="twitter" >Twitter Page</a>
   </div>
 <% end %>
+
+<% if !Settings.instance.environment.to_s.eql?('enterprise') %>
+  <div id='div-gpt-ad-1407836165464-0'>
+    <script type='text/javascript'>
+      googletag.cmd.push(function() {
+        googletag.pubads().display('/53015287/versioneye.com_d_160x600_1', [160, 600], 'div-gpt-ad-1407836165464-0');
+      });
+    </script>
+  </div>
+<% end %>
