Improve info texts for component whitelists.

--- a/app/views/component_whitelists/index.html.erb
+++ b/app/views/component_whitelists/index.html.erb
@@ -12,9 +12,7 @@
   <div class="content" >
 
     <p>
-      With a component whitelist you can whitelist artifacts or whole groupIds. Dependencies who are on a component
-      whitelist are marked green in the license tab, even if they violate the license whitelist or the license
-      is unknown.
+      <%= render partial: 'explain' %>
     </p>
 
     <p>
