Add note to open source projects.

--- a/app/views/pricing/index.html.erb
+++ b/app/views/pricing/index.html.erb
@@ -3,7 +3,10 @@
 <div class="col2-left col2-right">
   <p style="padding-top: 30px; margin-bottom: 5px; font-size: 18px;">
     We only charge a small fee for monitoring project files in GitHub/Bitbucket repositories.
-    VersionEye has a variety of plans to suit everyone's needs. <br/>
+    VersionEye has a variety of plans to suit everyone's needs. With the free plan you can
+    monitor 1 private and 4 public open source projects. The other plans have always the
+    same number of public &amp; private projects. With the "Beginner" plan for example
+    you can monitor 5 private project and 5 public projects.<br/>
     <br/>
     <b>All of our SaaS plans can be cancelled or changed on a monthly base.</b>
   </p>
@@ -15,7 +18,8 @@
       <li class="pricing_head">Free</li>
       <li class="pricing_price">€ 0 <span class="pricing_price_sm">/ Month</span></li>
       <li class="pricing_feature"><span class="pricing_light_txt">Collaborators:</span> Unlimited</li>
-      <li class="pricing_feature"><span class="pricing_light_txt">Projects:</span> 1</li>
+      <li class="pricing_feature"><span class="pricing_light_txt">Private Projects:</span> 1</li>
+      <li class="pricing_feature"><span class="pricing_light_txt">Open Source Projects:</span> 4</li>
       <li class="pricing_feature"><span class="pricing_light_txt">API Calls / Hour: </span> 50</li>
       <li class="pricing_feature"><%= render :partial => 'plan', :locals => { :plan_id => '04_free', :alignment => ''  } %></li>
     </ul>
