Add note to open source version

--- a/app/views/pricing/index.html.erb
+++ b/app/views/pricing/index.html.erb
@@ -6,7 +6,7 @@
     VersionEye has a variety of plans to suit everyone's needs. With the free plan you can
     monitor 1 private and 4 public open source projects. The other plans have always the
     same number of public &amp; private projects. With the "Beginner" plan for example
-    you can monitor 5 private project and 5 public projects.<br/>
+    you can monitor 5 private projects and 5 public projects.<br/>
     <br/>
     <b>All of our SaaS plans can be cancelled or changed on a monthly base.</b>
   </p>
@@ -87,4 +87,10 @@
       <li class="pricing_feature"><span class="pricing_light_txt"><a style="font-size: 20px;" href="mailto:support@versioneye.com">contact us</a></li>
     </ul>
   </div>
+</div>
+
+<div class = "col2-left col2-right" style="padding-top: 15px;">
+  <p style="margin-bottom: 30px; font-size: 18px;">
+    VersionEye is completely <a href="https://github.com/versioneye/">open source</a>. Here is described how to spin up <a href="https://github.com/versioneye/ops_contrib">your own VersionEye instance</a>. Feel free to <a href="mailto:support@versioneye.com">contact us</a> for support.
+  </p>
 </div>
