--- a/app/views/products/edit_licenses.html.erb
+++ b/app/views/products/edit_licenses.html.erb
@@ -50,7 +50,7 @@
 
     <div class="boxContainer">
       <% licenses = @product.licenses_all %>
-      <% if licenses && !licenses.empty? %>
+      <% if licenses and !licenses.empty? %>
 
         <table>
           <colgroup>
