--- a/app/views/organisations/components.html.erb
+++ b/app/views/organisations/components.html.erb
@@ -42,8 +42,8 @@
             <% end %>
           </select>
 
-          <select name="duplicates"  id="version" class="form-control" >
-            <option value="all_components"  <%= "selected" if params[:duplicates].to_s.eql?('all_components')  %> >All components</option>
+          <select name="duplicates"  id="duplicates" class="form-control" >
+            <option value="ALL"             <%= "selected" if params[:duplicates].to_s.eql?('ALL')             %> >All components</option>
             <option value="duplicates_only" <%= "selected" if params[:duplicates].to_s.eql?('duplicates_only') %> >Only duplicates</option>
           </select>
 
@@ -53,9 +53,8 @@
     </div>
 
 
-    <% comps = @organisation.component_list(params['team'], params['language'], params['version']).sort.to_h %>
+    <% comps = @organisation.component_list(params['team'], params['language'], params['version'], params['duplicates']).sort.to_h %>
     <% comps.keys.each do |key| %>
-      <% next if params[:duplicates].to_s.eql?('duplicates_only') && comps[key].keys.count < 2 %>
       <% sp = key.split(':') %>
       <% language = sp[0].to_s.downcase %>
       <% prod_key = sp[1].to_s.gsub('/', ':') %>
